# rcli

./: 404.html  Cargo.toml  deny.toml  encode.txt  encoded.txt  test.rest
examples/: toml_parse.rs
fixtures/: blake3.txt  chacha20poly1305.key  decode.txt  ed25519.pk  ed25519.sk  input.txt  sign.txt
src/: main.rs  opts.rs  process.rs  utils.rs
src/cli/: b64.rs  csv.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
src/process/: b64.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
