[package]
name = "rcli"
version = "0.1.0"
authors = ["fandream"]
about = "A simple CLI tool written in Rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
toml = { version = "0.8.19", features = ["display"] }
